--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Poppins";
+  src: url("./font/Poppins-Regular.ttf") format("ttf");
+}
+
 * {
   margin: 0;
   padding: 0;
