--- a/src/style.css
+++ b/src/style.css
@@ -146,6 +146,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -158,6 +159,7 @@ body {
 header {
   background-color: #212121;
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -166,12 +168,16 @@ header {
 
 nav {
   width: 80%;
-  background-color: #313131;
-  position: sticky;
-  z-index: 99;
+  background-color: #3a3a3a;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   border-radius: 0.5rem;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  z-index: 99;
 }
 
 .nav-button {
@@ -180,9 +186,17 @@ nav {
   color: white;
   border: none;
   background-color: transparent;
+  cursor: pointer;
   font-family: "Poppins";
 }
 
 .nav-button:hover {
   border-bottom: 1px solid white;
+}
+
+.home {
+  height: 100vh;
+  width: 100%;
+  background-color: #313131;
+  padding: 1rem 2rem;
 }
