--- a/src/style.css
+++ b/src/style.css
@@ -200,3 +200,17 @@ nav {
   background-color: #313131;
   padding: 1rem 2rem;
 }
+
+.menu {
+  height: 100vh;
+  width: 100%;
+  background-color: #313131;
+  padding: 1rem 2rem;
+}
+
+.about {
+  height: 100vh;
+  width: 100%;
+  background-color: #313131;
+  padding: 1rem 2rem;
+}
