--- a/src/style.css
+++ b/src/style.css
@@ -164,19 +164,29 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  position: relative;
+  z-index: 1;
+}
+
+.header-background {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  opacity: 0.5;
 }
 
 nav {
   width: 80%;
-  background-color: #3a3a3a;
+  background-color: black;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   border-radius: 0.5rem;
 }
 
-.sticky {
+nav.sticky {
   position: fixed;
-  top: 0;
+  top: 1rem;
   z-index: 99;
 }
 
