--- a/src/style.css
+++ b/src/style.css
@@ -205,10 +205,20 @@ nav.sticky {
 }
 
 .home {
+  font-family: "Poppins";
+  color: white;
   height: 100vh;
   width: 100%;
-  background-color: #313131;
   padding: 1rem 2rem;
+  background: url("./images/mike-kenneally-tNALoIZhqVM-unsplash.jpg");
+  background-size: cover;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.home > .left-side {
+  margin-top: 12vh;
+  padding: 1rem;
 }
 
 .menu {
@@ -223,4 +233,16 @@ nav.sticky {
   width: 100%;
   background-color: #313131;
   padding: 1rem 2rem;
+}
+
+footer {
+  background-color: #262932;
+  width: 100%;
+  height: 10%;
+  color: white;
+  font-family: "Poppins";
+  font-size: 1.2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
