--- a/src/style.css
+++ b/src/style.css
@@ -221,6 +221,45 @@ nav.sticky {
   padding: 1rem;
 }
 
+.headline {
+  font-size: 3rem;
+  font-weight: bold;
+}
+
+.home-paragraph {
+  font-size: 1.2rem;
+}
+
+.home-buttons {
+  margin-top: 1rem;
+}
+
+.order-button {
+  padding: 1rem 1.5rem;
+  border: 1px white solid;
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  font-family: "Poppins";
+  cursor: pointer;
+}
+
+.explore-button {
+  padding: 1rem 1.5rem;
+  border: 1.5px white solid;
+  background-color: transparent;
+  font-weight: bold;
+  color: white;
+  font-family: "Poppins";
+  margin-left: 1rem;
+  cursor: pointer;
+}
+
+.explore-button:hover {
+  color: black;
+  background-color: white;
+}
+
 .menu {
   height: 100vh;
   width: 100%;
