--- a/src/style.css
+++ b/src/style.css
@@ -261,13 +261,28 @@ nav.sticky {
 }
 
 .menu {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background-color: #313131;
   padding: 1rem 2rem;
   padding-top: 15%;
   color: white;
   font-family: "Poppins";
+}
+
+.menu-list {
+  margin: auto;
+  background-color: #212121;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 2rem;
+  padding: 3rem;
+}
+
+.menu-image {
+  width: 100%;
+  border-radius: 1rem;
 }
 
 .menu-headline {
