--- a/src/style.css
+++ b/src/style.css
@@ -264,24 +264,26 @@ nav.sticky {
   height: 100%;
   width: 100%;
   background-color: #313131;
-  padding: 1rem 2rem;
+  padding: 0 2rem;
   padding-top: 15%;
   color: white;
   font-family: "Poppins";
 }
 
 .menu-list {
-  margin: auto;
+  width: 100%;
+  padding: 3rem;
   background-color: #212121;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-template-rows: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(400px, 1fr));
   gap: 2rem;
-  padding: 3rem;
+  margin-top: 2rem;
 }
 
 .menu-image {
-  width: 100%;
+  width: 400px;
+  height: 400px;
   border-radius: 1rem;
 }
 
@@ -289,6 +291,29 @@ nav.sticky {
   width: 100%;
   text-align: center;
   font-size: 2.3rem;
+}
+
+.flex-order {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 3rem;
+  align-items: center;
+}
+
+.menu-name {
+  font-size: 1.5rem;
+}
+
+.order-button {
+  border: 1px white solid;
+  background-color: transparent;
+  border-radius: 0.5rem;
+  color: #ffffff;
+}
+
+.order-button:hover {
+  background-color: white;
+  color: black;
 }
 
 .about {
