--- a/src/style.css
+++ b/src/style.css
@@ -265,7 +265,7 @@ nav.sticky {
   width: 100%;
   background-color: #313131;
   padding: 0 2rem;
-  padding-top: 15%;
+  padding-top: 10%;
   color: white;
   font-family: "Poppins";
 }
@@ -282,8 +282,8 @@ nav.sticky {
 }
 
 .menu-image {
-  width: 400px;
-  height: 400px;
+  width: 100%;
+  height: 70%;
   border-radius: 1rem;
 }
 
@@ -319,8 +319,10 @@ nav.sticky {
 .about {
   height: 100vh;
   width: 100%;
-  background-color: #313131;
+  background-color: #262932;
   padding: 1rem 2rem;
+  color: white;
+  font-family: "Poppins";
 }
 
 footer {
@@ -333,4 +335,5 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
+  border-top: 1px solid white;
 }
