--- a/src/style.css
+++ b/src/style.css
@@ -317,12 +317,88 @@ nav.sticky {
 }
 
 .about {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background-color: #262932;
   padding: 1rem 2rem;
+  padding-top: 3rem;
   color: white;
   font-family: "Poppins";
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  gap: 3rem;
+}
+
+.contact-us {
+  grid-column: 1/3;
+  justify-self: center;
+  padding: 0.5rem 1rem;
+  background-color: white;
+  width: 60%;
+  height: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  border-radius: 1rem;
+  margin-top: 6rem;
+}
+
+.contact-us > button {
+  padding: 1rem 2rem;
+  border-radius: 1rem;
+  background-color: #fd930b;
+  color: white;
+  border: none;
+  font-weight: bold;
+}
+
+#contact-us {
+  width: 80%;
+  height: 90%;
+  padding: 1rem;
+  font-size: 1.4rem;
+  border: none;
+}
+
+.about-us {
+  height: 40vh;
+  padding: 1rem 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.gi-touch {
+  height: 40vh;
+  justify-self: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 1rem 4rem;
+}
+
+.email-input {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+}
+
+#email {
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
+.email-input > button {
+  padding: 1rem 1.5rem;
+  font-size: 1rem;
+  border-radius: 0.5rem;
+  background-color: #fd930b;
+  color: white;
+  border: none;
+  font-weight: bold;
 }
 
 footer {
